# DSCSRenderer

./: .gitignore  CMakeLists.txt  README.md  setup.py
src/DSCS/: Renderer.cpp
src/DSCS/DataObjects/: OpenGLDSCSMaterial.cpp  OpenGLDSCSTexture.cpp  OpenGLDSCSTexture.hpp
src/FileFormats/Textures/: DDS.cpp
